<resources>
    <string name="app_name">OurApplication</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Пароль</string>
    <string name="login">Войти</string>
    <string name="invalid_password">Пароль не подходит</string>
    <string name="invalid_email">Такой пользователь не найден</string>
    <string name="title_recipes_list">Recipes</string>
    <string name="title_recipe">Resipe</string>

</resources>