<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.ourapplication.viewmodels.login.LoginViewModel" />
    </data>
    <ScrollView


    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".views.LoginActivity">
        <ImageView
            android:id="@+id/image"
            app:layout_constraintVertical_chainStyle="packed"
            android:src="@drawable/logo"
            android:layout_width="150dp"
            android:adjustViewBounds="true"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/input_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toBottomOf="@+id/image"
            app:layout_constraintBottom_toTopOf="@id/input_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/input_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:text="@={viewModel.email}"
                android:id="@+id/input_email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toBottomOf="@+id/input_email"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/input_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:text="@={viewModel.password}"
                android:id="@+id/input_password_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/input_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:onClick="@{() -> viewModel.onLogin()}"
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@id/notify_wrapper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_password" />
        <FrameLayout
            android:id="@+id/notify_wrapper"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_password"
            android:paddingTop="10dp">

            <TextView
                android:visibility="gone"
                android:id="@+id/incorrect_password"
                android:text="@string/invalid_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:visibility="gone"
                android:text="@string/invalid_email"
                android:id="@+id/incorrect_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>
